finish HTML Crash

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <b>Bold</b>
     </div>
     <a href="http://discord.gg/frontend" target ="_blank">Discord Server</a>
+    <a href="./test/dashboard.html">Dashboard</a>
 </body>
 </html>
