--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>John</h1>
-    <h2>Frontend Simplified</h2>
-    <p>Test Change <i>Lorem</i> ipsum dolor sit amet consectetur adipisicing elit. Ipsam ab reprehenderit sint recusandae repellendus voluptatibus repudiandae molestias dolorum facilis eum at id rerum, tempora similique minus ullam vel placeat. Aperiam.</p>
-    <button>22</button>
-    <div>
-        <b>Bold</b>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container"> 
+        <div class="box-1">
+            <h1>John Erlbacher</h1>
+            <p>
+                <b
+                >This is my first website that I plan on messing around with to learn
+                html, css, and javascript.</b>
+                <h2>Frontend Simplified Test</h2>
+            </p>
+        </div>
+        <div class="box-2">
+            <h1>Testing Boxes and Margin</h1>
+            <p>
+                Test Change <i>Lorem</i> ipsum dolor sit amet consectetur adipisicing
+                elit. Ipsam ab reprehenderit sint recusandae repellendus voluptatibus
+                repudiandae molestias dolorum facilis eum at id rerum, tempora similique
+                minus ullam vel placeat. Aperiam.
+            </p>
+        </div>
+        <div class="categories">
+            <h2>Interests</h2>
+            <ul>
+                <li>Food</li>
+                <li>Fitness</li>
+                <li>Gaming</li>
+            </ul>
+        </div>
     </div>
-    <a href="http://discord.gg/frontend" target ="_blank">Discord Server</a>
+        <button>22</button>
+    <div>
+      <b>This is Bold</b>
+    </div>
+    <a href="http://discord.gg/frontend" target="_blank">Discord Server</a>
     <a href="./test/dashboard.html">Dashboard</a>
-</body>
+  </body>
 </html>
