--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+        Logo
+        <a href="./test/dashboard.html">Dashboard</a>
+    </nav>
     <h1>Login</h1>
     <form>
       <div>
