--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -10,6 +10,7 @@
     <nav>
       Logo
       <a href="/index.html">Home</a>
+      <a href="/login.html">Login</a>
     </nav>
     <main>
       <section>
